--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <h2>CCS174 PROJECT!<br></h2>
     <div class = "loginbox">
-    <form method = "post" action = "https://csc174final.herokuapp.com">
+    <form method = "post" action = "csc174.php">
     <p>
     <label for = "customer">Insert First Name into Customer: </label><br>
     </p>
