--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <body>
 
-    <h2>CCS174 PROJECT!<br></h2>
+    <h2>CSC174 PROJECT!<br></h2>
     <div class = "loginbox">
     <form method = "post" action = "csc174.php">
     <p>
@@ -12,17 +12,10 @@
     </p>
     <input type = "text" id = "firstname" name = "firstname"><br><br>
 
-    <!--<p>
-    <label for = "password">*Password</label><br>
-    </p>
-    <input type = "password" id = "password" name = "password"><br><br>-->
+    
 	
     <input type = "submit" value = "Submit">
-    <!--
-    <br><br>
-    <b>Already have an account?</b>
-    <a href = "finallogin.html">Login</a><br><br>
-    -->
+
 
 </form>
 </div>
